[package]
name = "binlog_events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "22.2.0"
rutie = "0.8.4"

[lib]
name = "binlog_events"
crate-type = ["cdylib"]

[profile.release]
debug = true
opt-level = 0
rpath = true
debug-assertions = true
