[package]
name = "binlog_events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "22.2.0"
rmp-serde = "1.1.1"
serde = "1.0.145"
serde_derive = "1.0.145"
tokio = { version = "1.21.2", features = ["full"] }

# [lib]
# name = "binlog_events"
# crate-type = ["cdylib"]

# [profile.release]
# debug = true
# opt-level = 0
# rpath = true
# debug-assertions = true
